--- a/src/scss/helpers/vars.scss
+++ b/src/scss/helpers/vars.scss
@@ -1,5 +1,7 @@
-$color-dark: #2f2222;
-$color-accent: #5d71dd;
+$color-black:#000;
+$color-white:#fff;
+$color-grey: #37455c;
+$color-accent: #005aff;
 
 $breakpoint_xs: '576px';
 $breakpoint_sm: '768px';
@@ -7,4 +9,4 @@ $breakpoint_md: '991px';
 $breakpoint_lg: '1200px';
 $breakpoint_xl: '1400px';
 
-$font-family-primary: 'Futura PT', sans-serif;
+$font-family-primary: 'Gotham Pro', sans-serif;
