--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -1,3 +1,15 @@
 .btn {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 13px 22px;
+  height: 54px;
+  border-radius: 3px;
+  font-weight: 500;
+  font-size: 16px;
+
+  &--accent {
+    background-color: $color-accent;
+    color: $color-white;
+  }
 }
