--- a/src/scss/helpers/fonts.scss
+++ b/src/scss/helpers/fonts.scss
@@ -1,17 +1,43 @@
 @font-face {
-	font-family: 'Futura PT';
-	src: url('../fonts/FuturaPTBook.woff2') format('woff2'),
-		url('../fonts/FuturaPTBook.woff') format('woff');
+	font-family: 'Gotham Pro';
+	src:
+    local("Gotham Pro"),
+    // url("../fonts/GothamPro-Light.woff2") format("woff2"),
+    url('../fonts/GothamPro-Light.woff') format('woff');
+	font-display: swap;
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gotham Pro';
+	src:
+    local("Gotham Pro"),
+    // url("../fonts/GothamPro.woff2") format("woff2"),
+    url('../fonts/GothamPro.woff') format('woff');
 	font-display: swap;
 	font-weight: 400;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'Futura PT';
-	src: url('../fonts/FuturaPTMedium.woff2') format('woff2'),
-		url('../fonts/FuturaPTMedium.woff') format('woff');
+	font-family: 'Gotham Pro';
+	src:
+    local("Gotham Pro"),
+    // url("../fonts/GothamPro-Medium.woff2") format("woff2"),
+    url('../fonts/GothamPro-Medium.woff') format('woff');
 	font-display: swap;
 	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gotham Pro';
+	src:
+    local("Gotham Pro"),
+    // url("../fonts/GothamPro-Bold.woff2") format("woff2"),
+    url('../fonts/GothamPro-Bold.woff') format('woff');
+	font-display: swap;
+	font-weight: 700;
 	font-style: normal;
 }
