адаптив header footer 1 экран

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -123,6 +123,10 @@ img {
   position: absolute;
   bottom: 0;
   right: 20px;
+
+  @include media-max($breakpoint_sm) {
+    display: none;
+  }
 }
 
 .online-cons {
