--- a/src/scss/modules/popup-request.scss
+++ b/src/scss/modules/popup-request.scss
@@ -8,4 +8,9 @@
     font-size: 20px;
     line-height: 1.2;
   }
+
+  &__btns {
+    flex-direction: column !important;
+    align-items: center !important;
+  }
 }
