--- a/src/scss/helpers/vars.scss
+++ b/src/scss/helpers/vars.scss
@@ -1,6 +1,7 @@
 $color-black:#000;
 $color-white:#fff;
 $color-grey: #37455c;
+$color-whitegrey: #eff4f5;
 $color-accent: #005aff;
 
 $breakpoint_xs: '576px';
