--- a/src/scss/modules/experience.scss
+++ b/src/scss/modules/experience.scss
@@ -1,13 +1,52 @@
 .experience-section {
   position: relative;
-  padding-bottom: 319px;
-}
 
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 100%;
+    background-color: $color-accent;
+    z-index: -1;
+  }
+
+  // &:after {
+  //   z-index: -1;
+  //   content: '';
+  //   position: absolute;
+  //   left: 0;
+  //   bottom: 0;
+  //   width: 100%;
+  //   height: 610px;
+  //   background-color: $color-accent;
+  //   clip-path: polygon(0 27%, 100% 0, 100% 73%, 0% 100%);
+  // }
+  // padding-bottom: 319px;
+
+  // @include media-max($breakpoint_xl) {
+  //   padding-bottom: 120px;
+  // }
+
+  &__container {
+    margin-top: 190px;
+    padding-bottom: 147px;
+
+    @include media-max($breakpoint_md) {
+      margin-top: 107px;
+    }
+  }
+}
 .experience {
   color: $color-white;
   display: flex;
 
-  @include media-max($breakpoint_xs) {
+  @include media-max($breakpoint_lg) {
+    justify-content: space-between;
+  }
+
+  @include media-max($breakpoint_sm) {
     flex-direction: column;
   }
 
@@ -19,7 +58,11 @@
     line-height: 1;
     text-transform: uppercase;
 
-    @include media-max($breakpoint_xs) {
+    @include media-max($breakpoint_xl) {
+      font-size: 32px;
+    }
+
+    @include media-max($breakpoint_md) {
       font-size: 26px;
       margin: 0 0 41px 0;
     }
@@ -31,7 +74,11 @@
       letter-spacing: -0.01em;
       text-transform: uppercase;
 
-      @include media-max($breakpoint_xs) {
+      @include media-max($breakpoint_xl) {
+        font-size: 80px;
+      }
+
+      @include media-max($breakpoint_md) {
         margin: 11px 0 0 0px;
         font-size: 40px;
       }
@@ -42,7 +89,7 @@
     align-self: flex-end;
     margin-bottom: 10px;
 
-    @include media-max($breakpoint_xs) {
+    @include media-max($breakpoint_sm) {
       align-self: flex-start;
     }
 
@@ -77,10 +124,9 @@
   align-items: center;
   justify-content: space-between;
 
-  @include media-max($breakpoint_xs) {
+  @include media-max($breakpoint_sm) {
     display: none;
   }
-
 }
 
 .experience-bottom-column {
