--- a/src/scss/modules/guarantee.scss
+++ b/src/scss/modules/guarantee.scss
@@ -1,13 +1,56 @@
 .guarantee-section {
   position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: $color-whitegrey;
+    z-index: -1;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 420px;
+    background-color: $color-accent;
+    z-index: -1;
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+
+    @include media-max($breakpoint_xl) {
+      height: 240px;
+    }
+    @include media-max($breakpoint_lg) {
+      height: 150px;
+    }
+  }
 }
 
 .guarantee {
   &__container {
-    margin-bottom: 374px;
+    transform: translateY(-180px);
+    padding-bottom: 180px;
+
+    @include media-max($breakpoint_xl) {
+      padding-bottom: 0;
+    }
   }
   &__booklet {
     margin-bottom: 64px;
+
+    @include media-max($breakpoint_lg) {
+      margin-bottom: 0px;
+    }
+
+    @include media-max($breakpoint_sm) {
+      margin-bottom: 23px;
+    }
   }
 
   &__types {
@@ -15,7 +58,7 @@
   }
 
   &__grid {
-    margin-bottom: 345px;
+    // margin-bottom: 345px;
   }
 
   &__title {
@@ -28,10 +71,22 @@
   padding: 77px 0;
   display: flex;
   justify-content: space-between;
+  gap: 50px;
+
+  @include media-max($breakpoint_sm) {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 0;
+  }
 
   &__left {
     position: relative;
     width: 286px;
+    flex-shrink: 0;
+
+    @include media-max($breakpoint_sm) {
+      height: 260px;
+    }
 
     img {
       position: absolute;
@@ -52,17 +107,35 @@
     font-weight: 500;
     font-size: 30px;
     line-height: 1.1;
+
+    @include media-max($breakpoint_sm) {
+      font-size: 24px;
+      margin-bottom: 43px;
+
+      br {
+        display: none;
+      }
+    }
   }
 
   &__text {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+
+    @include media-max($breakpoint_sm) {
+      font-size: 16px;
+    }
   }
 }
 
 .guarantee-types {
   display: flex;
+
+  @include media-max($breakpoint_sm) {
+    flex-direction: column;
+    gap: 21px;
+  }
 
   &__item {
     display: flex;
@@ -106,6 +179,15 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 31px 20px;
+
+  @include media-max($breakpoint_lg) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @include media-max($breakpoint_sm) {
+    grid-template-columns: 1fr;
+    gap: 12px;
+  }
 }
 
 .guarantee-item {
