--- a/src/scss/modules/map.scss
+++ b/src/scss/modules/map.scss
@@ -25,7 +25,14 @@
 
   &__bottom {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    gap: 50px 20px;
+
+    @include media-max($breakpoint_lg) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
 
@@ -43,5 +50,9 @@
 
   .form__btns {
     margin-bottom: 0;
+
+    @include media-max($breakpoint_lg) {
+      align-items: center;
+    }
   }
 }
