--- a/src/scss/modules/offer.scss
+++ b/src/scss/modules/offer.scss
@@ -1,11 +1,41 @@
 .offer-section {
   position: relative;
 
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 100%;
+    height: 610px;
+    background-color: $color-accent;
+    clip-path: polygon(0 70%, 100% 24%, 100% 100%, 0% 100%);
+    z-index: -1;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 610px;
+    background-color: $color-whitegrey;
+    clip-path: polygon(0 70%, 100% 0, 100% 30%, 0% 100%);
+    z-index: -1;
+  }
+
   &__container {
     margin-top: 190px;
+    padding-bottom: 147px;
+
+    @include media-max($breakpoint_lg) {
+      padding-bottom: 117px;
+    }
 
     @include media-max($breakpoint_md) {
-      margin-top: 107px;
+      margin-top: 100px;
+      padding-bottom: 80px;
     }
   }
 }
@@ -45,6 +75,10 @@
   &__description {
     margin-bottom: 220px;
 
+    @include media-max($breakpoint_xl) {
+      margin-bottom: 120px;
+    }
+
     @include media-max($breakpoint_lg) {
       margin-bottom: 100px;
     }
@@ -59,7 +93,7 @@
     background-image: url('../images/masks/mask-main-1.svg');
     background-repeat: no-repeat;
     background-position: 0 0;
-    margin-bottom: 148px;
+    // margin-bottom: 148px;
 
     @include media-max($breakpoint_xl) {
       background: $color-grey;
@@ -68,12 +102,16 @@
       justify-content: space-between;
     }
 
+    @include media-max($breakpoint_lg) {
+      // margin-bottom: 70px;
+    }
+
     @include media-max($breakpoint_sm) {
       margin: 0 auto;
+      // margin-bottom: 40px;
       padding: 0 21px;
       flex-direction: column;
       align-items: center;
-      margin-bottom: 40px;
       background: url(../images/masks/mobile/sm-mask-main-1.svg);
       background-repeat: no-repeat;
       background-position: 0 37px;
