--- a/src/scss/modules/prices.scss
+++ b/src/scss/modules/prices.scss
@@ -1,6 +1,26 @@
+.prices-section {
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: $color-whitegrey;
+    z-index: -1;
+  }
+}
+
 .prices {
   &__container {
-    margin-bottom: 93px;
+    padding-bottom: 93px;
+
+
+    @include media-max($breakpoint_md) {
+      padding-bottom: 40px;
+    }
   }
 
   &__descr {
@@ -27,6 +47,7 @@
 
   &__sidebar {
     width: 286px;
+    flex-shrink: 0;
   }
 
   &__features {
@@ -104,7 +125,8 @@
 
   &__list {
     display: flex;
-    gap: 18px;
+    flex-wrap: wrap;
+    gap: 50px 18px;
   }
 }
 
