--- a/src/scss/modules/time-limits.scss
+++ b/src/scss/modules/time-limits.scss
@@ -1,25 +1,65 @@
 .time-limits-section {
+  position: relative;
   color: $color-white;
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: $color-accent;
+    z-index: -1;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 420px;
+    background-color: $color-whitegrey;
+    z-index: -1;
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+
+    @include media-max($breakpoint_xl) {
+      height: 240px;
+    }
+    @include media-max($breakpoint_lg) {
+      height: 150px;
+    }
+  }
 }
 
 .time-limits {
   &__container {
     padding-top: 55px;
-    margin-bottom: 302px;
-  }
-
-  &__title {
-
+    padding-bottom: 302px;
   }
 
   &__list {
     display: flex;
     padding-top: 126px;
+
+    @include media-max($breakpoint_lg) {
+      flex-wrap: wrap;
+      row-gap: 50px;
+    }
   }
 
   &__item {
     position: relative;
     width: 200px;
+
+    @include media-max($breakpoint_lg) {
+      width: calc(100% / 3);
+
+      &:nth-of-type(4) {
+        order: -1;
+      }
+    }
     // &-icon {
     //   display: flex;
     //   align-items: center;
@@ -74,7 +114,6 @@
     &--last {
       z-index: 2;
       position: relative;
-      margin-left: auto;
       padding-left: 35px;
       padding-right: 20px;
       width: 205px;
