--- a/src/scss/modules/work-order.scss
+++ b/src/scss/modules/work-order.scss
@@ -1,13 +1,28 @@
+.work-order-section {
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: $color-whitegrey;
+    z-index: -1;
+  }
+}
+
 .work-order {
   &__container {
     position: relative;
-    margin-bottom: 115px;
+    padding-bottom: 115px;
   }
 
   &__banner {
     position: absolute;
     top: -370px;
-    right: 0;
+    right: 20px;
   }
 
   &__title {
@@ -15,9 +30,21 @@
   }
 
   &__grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 43px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 43px 20px;
+    // display: flex;
+    // flex-wrap: wrap;
+    // gap: 43px;
+
+    @include media-max($breakpoint_lg) {
+      grid-template-columns: 1fr 1fr;
+    }
+
+    @include media-max($breakpoint_sm) {
+      grid-template-columns: 1fr;
+    }
+
     &-row {
       width: 100%;
       display: flex;
@@ -69,9 +96,21 @@
   border-radius: 20px;
 
   height: 240px;
-  width: calc(100% /3);
+  // width: calc(100% /3);
   display: flex;
   align-items: center;
+
+  @include media-min(1300px) {
+    &:nth-of-type(1) { order: 1; }
+    &:nth-of-type(2) { order: 2; }
+    &:nth-of-type(3) { order: 3; }
+    &:nth-of-type(4) { order: 6; }
+    &:nth-of-type(5) { order: 5; }
+    &:nth-of-type(6) { order: 4; }
+    &:nth-of-type(7) { order: 7; }
+    &:nth-of-type(8) { order: 8; }
+    &:nth-of-type(9) { order: 9; }
+  }
 
   &__icon {
     width: 89px;
@@ -108,7 +147,11 @@
       top: 50%;
       right: calc(100% + 7px);
       background-image: url('../images/work-arrow.svg');
-      transform: scale(-1, 1)
+      transform: scale(-1, 1);
+
+      @include media-max(1300px) {
+        display: none;
+      }
     }
   }
 
@@ -124,6 +167,10 @@
       background-image: url('../images/work-arrow.svg');
       background-repeat: no-repeat;
       background-position: 0 0;
+
+      @include media-max(1300px) {
+        display: none;
+      }
     }
 
     &--accent {
