--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,12 +1,36 @@
 .footer {
+  position: relative;
   background: rgba($color: $color-grey, $alpha: .8) url('../images/map.png');
+  z-index: 0;
   color: $color-white;
 
   @include media-max($breakpoint_sm) {
     background: none;
+    &:before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 1px;
+      width: 100%;
+      height: 100%;
+      background-color: $color-grey;
+      z-index: 1;
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 540px;
+      background-color: #005aff;
+      z-index: 1;
+      clip-path: polygon(0 72%, 100% 55%, 100% 100%, 0% 100%);
+    }
   }
 
   &__container {
+    z-index: 10;
     position: relative;
 
     @include media-max($breakpoint_sm) {
@@ -16,9 +40,9 @@
 
   &__body {
     padding: 50px 42px 22px;
-    background-image: url('../images/masks/footer-bg.svg');
-    background-repeat: no-repeat;
-    background-position: 0 0;
+    // background-image: url('../images/masks/footer-bg.svg');
+    // background-repeat: no-repeat;
+    // background-position: 0 0;
     max-width: 524px;
     width: 100%;
     display: flex;
@@ -26,6 +50,8 @@
 
     @include media-max($breakpoint_sm) {
       margin: 0 auto;
+      padding-left: 15px;
+      padding-right: 15px;
     }
   }
 
