--- a/src/scss/modules/advantages.scss
+++ b/src/scss/modules/advantages.scss
@@ -30,32 +30,11 @@
     @include media-max($breakpoint_lg) {
       height: 160px;
     }
-  }
 
-  &:after {
-    // z-index: -1;
-    // content: '';
-    // position: absolute;
-    // left: 0;
-    // bottom: 0;
-    // width: 100%;
-    // height: 610px;
-    // background-color: $color-accent;
-    // clip-path: polygon(0 27%, 100% 0, 100% 73%, 0% 100%);
-  }
-  // padding-bottom: 319px;
-
-  // @include media-max($breakpoint_xl) {
-  //   padding-bottom: 120px;
-  // }
-
-  &__container {
-    // margin-top: 190px;
-    // padding-bottom: 147px;
-
-    // @include media-max($breakpoint_md) {
-    //   margin-top: 107px;
-    // }
+    @include media-max($breakpoint_sm) {
+      height: 95px;
+      clip-path: polygon(0 100%, 100% 0, 100% 100%);
+    }
   }
 }
 
@@ -75,7 +54,8 @@
     }
 
     @include media-max($breakpoint_sm) {
-      // padding-top: 125px;
+      padding-top: 30px;
+      padding-bottom: 74px;
     }
   }
 
