--- a/src/scss/modules/guarantee.scss
+++ b/src/scss/modules/guarantee.scss
@@ -26,19 +26,33 @@
     @include media-max($breakpoint_xl) {
       height: 240px;
     }
+
     @include media-max($breakpoint_lg) {
       height: 150px;
+    }
+
+    @include media-max($breakpoint_sm) {
+      height: 95px;
+      clip-path: polygon(0 100%, 100% 0, 100% 100%);
     }
   }
 }
 
 .guarantee {
   &__container {
-    transform: translateY(-180px);
     padding-bottom: 180px;
 
     @include media-max($breakpoint_xl) {
-      padding-bottom: 0;
+      padding-bottom: 100px;
+    }
+
+    @include media-max($breakpoint_sm) {
+      padding-top: 20px;
+      padding-bottom: 113px;
+    }
+
+    @include media-min($breakpoint_sm) {
+      transform: translateY(-180px);
     }
   }
   &__booklet {
@@ -64,6 +78,10 @@
   &__title {
     color: $color-white;
     margin-bottom: 97px;
+
+    @include media-max($breakpoint_sm) {
+      margin-bottom: 77px;
+    }
   }
 }
 
