--- a/src/scss/modules/result.scss
+++ b/src/scss/modules/result.scss
@@ -15,8 +15,14 @@
     @include media-max($breakpoint_xl) {
       height: 240px;
     }
+
     @include media-max($breakpoint_lg) {
       height: 180px;
+    }
+
+    @include media-max($breakpoint_sm) {
+      height: 95px;
+      clip-path: polygon(0 100%, 100% 0, 100% 100%);
     }
   }
 }
@@ -35,10 +41,19 @@
     @include media-max($breakpoint_md) {
       padding-bottom: 100px;
     }
+
+    @include media-max($breakpoint_sm) {
+      padding-top: 30px;
+      padding-bottom: 105px;
+    }
   }
 
   &__title {
     margin-bottom: 59px;
+
+    @include media-max($breakpoint_sm) {
+      margin-bottom: 29px;
+    }
   }
 
   &__descr {
@@ -46,9 +61,6 @@
     font-weight: 500;
     font-size: 22px;
     line-height: 1.1;
-
-    display: flex;
-    align-items: center;
 
     @include media-max($breakpoint_lg) {
       margin-bottom: 60px;
@@ -60,12 +72,17 @@
       font-size: 16px;
     }
 
+    @include media-max($breakpoint_sm) {
+      margin-bottom: 20px;
+      font-size: 18px;
+      line-height: 1.5;
+    }
+
     span {
       padding: 10px;
       background-color: $color-accent;
       color: $color-white;
       border-radius: 5px;
-      margin-right: 8px;
     }
   }
 
@@ -76,6 +93,7 @@
     @include media-max($breakpoint_md) {
       flex-direction: column;
       align-items: center;
+      gap: 38px;
     }
   }
 
@@ -89,7 +107,9 @@
   }
 
   &__list {
-    margin-right: 26px;
+    @include media-min($breakpoint_sm) {
+      margin-right: 26px;
+    }
   }
 }
 
@@ -108,6 +128,12 @@
     background-image: url('../images/masks/result-icon-grey.svg');
     background-repeat: no-repeat;
     background-position: 0 0;
+  }
+
+  @include media-max($breakpoint_sm) {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
   }
 }
 
