--- a/src/scss/modules/technics-section.scss
+++ b/src/scss/modules/technics-section.scss
@@ -6,7 +6,7 @@
     content: '';
     position: absolute;
     left: 0;
-    bottom: 0px;
+    bottom: 1px;
     width: 100%;
     height: 100%;
     background-color: $color-grey;
@@ -23,14 +23,27 @@
     background-color: $color-whitegrey;
     z-index: -1;
     clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+
+    @include media-max($breakpoint_sm) {
+      height: 95px;
+      clip-path: polygon(0 100%, 100% 0, 100% 100%);
+    }
   }
 }
 
 .technics {
   &__container {
     overflow-x: hidden;
-    transform: translateY(-40px);
     padding-bottom: 295px;
+
+    @include media-max($breakpoint_sm) {
+      padding-top: 30px;
+      padding-bottom: 72px;
+    }
+
+    @include media-min($breakpoint_sm) {
+      transform: translateY(-40px);
+    }
   }
 
   &__title {
@@ -87,12 +100,21 @@
     position: relative;
     height: 600px;
 
+    @include media-max($breakpoint_sm) {
+      height: 390px;
+    }
+
     &--kamaz {
       z-index: -1;
       max-width: initial;
       position: absolute;
       top: -173px;
       left: -166px;
+
+      @include media-max($breakpoint_sm) {
+        top: 0;
+        left: 0;
+      }
     }
 
     &--ghost {
