--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -72,6 +72,12 @@
   &__mail {
     font-weight: 500;
     font-size: 18px;
+    display: inline-block;
+
+    &:hover, &:focus {
+      text-decoration: underline;
+      animation: heartbeat 0.6s infinite;
+    }
   }
 }
 
