--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -66,6 +66,11 @@
     font-weight: 500;
     font-size: 16px;
 
+    &:hover, &:focus-within {
+      transform: scale(1.05);
+      animation: heartbeat 0.6s infinite;
+    }
+
     @include media-max($breakpoint_xl) {
       width: 178px;
       padding: 0 15px !important;
