--- a/src/scss/modules/prices.scss
+++ b/src/scss/modules/prices.scss
@@ -51,6 +51,12 @@
   }
 
   &__cards {
+    width: calc(100% - 316px);
+
+    @include media-max($breakpoint_sm) {
+      width: 100%;
+    }
+
     &:not(:last-child) {
       margin-bottom: 41px;
     }
@@ -78,11 +84,15 @@
   }
 
   &__features {
-    padding-top: 90px;
+    @include media-min($breakpoint_sm) {
+      padding-top: 90px;
+    }
   }
 
   &__pay {
-    padding-top: 110px;
+    @include media-min($breakpoint_sm) {
+      padding-top: 110px;
+    }
   }
 }
 
@@ -163,11 +173,11 @@
 }
 
 .prices-cards {
-  max-width: 786px;
+  max-width: 100%;
 
   &__title {
     margin: 0;
-    margin-bottom: 93px;
+    margin-bottom: 24px;
     font-weight: 500;
     font-size: 22px;
     line-height: 1.1;
@@ -191,7 +201,86 @@
   }
 }
 
+.prices-slider {
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+  &__btns {
+    width: 250px;
+    height: 35px;
+    margin: 0 auto;
+    position: relative;
+    margin-bottom: 60px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @include media-max(1140px) {
+      // display: block;
+    }
+  }
+
+  .swiper-wrapper {
+    height: auto;
+  }
+}
+
+.prices-pag {
+  position: initial;
+  display: block;
+
+  & .swiper-pagination-bullet {
+    width: 10px;
+    height: 4px;
+    border-radius: 8px;
+    background-color: rgba($color: $color-grey, $alpha: .8);
+
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
+  }
+
+  & .swiper-pagination-bullet-active {
+    width: 48px;
+    height: 4px;
+    border-radius: 8px;
+    background-color: $color-grey;
+
+  }
+}
+
+.prices-prev-btn,
+.prices-next-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
+  background-color: $color-grey;
+  opacity: 1;
+  color: $color-white;
+  border-radius: 100%;
+
+  svg {
+    width: 8px;
+    height: 14px;
+    stroke: $color-white;
+    path { stroke: $color-white; }
+  }
+
+  &.swiper-button-disabled {
+    opacity: 0.1;
+  }
+}
+
+.prices-next-btn {
+  svg { transform: scale(-1, 1) }
+}
+
 .prices-card {
+  height: auto;
   width: 250px;
   background-color: $color-white;
   border-radius: 0 0 8px 8px;
@@ -381,6 +470,10 @@
     align-items: center;
     color: $color-white;
     border-radius: 0 0 8px 8px;
+
+    &:hover, &:focus-within {
+      background-color: darken($color: $color-grey, $amount: 5%);
+    }
 
     svg {
       margin-left: 10px;
